# personal-website

./: Cargo.toml  README.md  check.sh  index.html  manifest.json  rust-toolchain  sw.js  website-3e3592de3053203.js  website-a96fbdd6b5e87f4c.js
.github/workflows/: pages.yml  rust.yml
src/: lib.rs  main.rs
