[package]
name = "website"
version = "0.1.0"
edition = "2021"


[dependencies]
eframe = { version = "0.27.2", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
egui_dock = "0.12.0"
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
image = { version = "0.24.9", features = ["gif", "jpeg", "png"] }
log = "0.4"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm


# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
